app/javascript/css/theme/_dark_mode.scss
@media (prefers-color-scheme: dark) {
  /* Overrides for Dark Mode. */
  body {
    color: $white;
    background: $gray-base;
  }

  a {
    color: $blue;
  }

  .app-footer,
  .app-header {
    color: white;
    background: $black;
    border-color: $gray-900;
  }

  .app-header .navbar-toggler-icon,
  .devise .app-logo,
  .navbar-brand h1.navbar-brand-full img {
    filter: invert(1);
  }

  .sidebar {
    background: $black;

    .nav-link.active {
      background: $gray-base;
    }
  }

  .modal-footer,
  .modal-header {
    border-color: rgba(255, 255, 255, 0.2);
  }

  .modal-content {
    background-color: $black;
    border-color: rgba(255, 255, 255, 0.2);
  }

  .close {
    color: $white;

    &:hover {
      color: $white;
    }
  }

  .navbar-nav .nav-link {
    color: $gray-300;
  }

  .navbar-nav .nav-link:focus,
  .navbar-nav .nav-link:hover {
    color: $white;
  }

  .navbar-nav .active > .nav-link,
  .navbar-nav .active > .nav-link:focus,
  .navbar-nav .active > .nav-link:hover,
  .navbar-nav .nav-link.active,
  .navbar-nav .nav-link.active:focus,
  .navbar-nav .nav-link.active:hover,
  .navbar-nav .nav-link.open,
  .navbar-nav .nav-link.open:focus,
  .navbar-nav .nav-link.open:hover,
  .navbar-nav .open > .nav-link,
  .navbar-nav .open > .nav-link:focus,
  .navbar-nav .open > .nav-link:hover {
    color: $gray-200;
  }

  .card {}

  .card-header {}

  .card-body {
    background-color: $black;
  }

  .card-header-action:hover {
    color: $gray-300;
  }

  .card-footer {
    border-top-color: $gray-900;
  }

  .tab-content {
    background-color: $black;
    border-color: $gray-800;
  }

  .nav-tabs {
    .nav-link.active {
      color: $white;
      background-color: $black;
      border-color: $gray-800;
      border-bottom-color: $black;

      &:focus {
        background-color: $black;
        border-color: $gray-800;
      }
    }

    .nav-link:focus,
    .nav-link:hover {
      border-color: $gray-800;
    }
  }

  .dropdown-menu {
    // background-color: $black;
    background-color: $gray-950;
    border-color: $gray-800;
    color: $white;
  }

  .table {
    color: $white;
  }

  .table td,
  .table th,
  .table thead th {
    border-color: $gray-900;
  }

  .table-sticky-header thead {
    background-color: $black;
  }

  tbody tr.clickable:hover {
    background-color: $gray-950;
    color: $white;
  }

  .table-success,
  .table-success > td,
  .table-success > th {
    background-color: darken($green, 10%);
  }

  .table tbody + tbody {
    border-color: $gray-800;
  }

  .list-group-item {
    background-color: $black;
  }

  .list-group-item-action:focus,
  .list-group-item-action:hover {
    background-color: $gray-950;
  }

  .page-link {
    background-color: $black;
    border-color: $gray-800;

    &:hover {
      background-color: $gray-950;
      border-color: $gray-700;
    }
  }

  .page-item.disabled .page-link {
    background-color: $black;
    border-color: $gray-800;
  }

  .form-control {
    color: $white;
    border-color: $gray-700;
    background-color: $gray-900;

    &:focus {
      color: $white;
      background-color: $gray-900;
    }
  }

  .btn-primary {
    background-color: darken($primary, 5);
    border-color: darken($primary, 5);
  }

  .btn-secondary {
    background-color: darken($secondary, 20);
    border-color: darken($secondary, 20);
  }

  .badge-secondary {
    background-color: darken($secondary, 20);
  }

  .input-group-text {
    color: $gray-400;
    background-color: $gray-950;
    border-color: $gray-700;
  }

  trix-toolbar {
    .trix-button {
      background: $gray-600 !important;
    }
  }

  pre {
    color: $gray-200;
  }
}

